--- a/code/common/Network/Network.vcxproj
+++ b/code/common/Network/Network.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client\client_network_select.cpp" />
+    <ClCompile Include="Client\multi_client_network_select.cpp" />
     <ClCompile Include="conn_info\client_conn_info.cpp" />
     <ClCompile Include="conn_info\conn_info.cpp" />
     <ClCompile Include="conn_info\server_conn_info.cpp" />
@@ -20,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\Share\Header\Base\INetwork.h" />
     <ClInclude Include="Client\client_network_select.h" />
+    <ClInclude Include="Client\multi_client_network_select.h" />
     <ClInclude Include="conn_info\client_conn_info.h" />
     <ClInclude Include="conn_info\conn_info.h" />
     <ClInclude Include="conn_info\server_conn_info.h" />
