--- a/code/server/center/CenterServerLogic/CenterServerLogic.vcxproj.filters
+++ b/code/server/center/CenterServerLogic/CenterServerLogic.vcxproj.filters
@@ -88,6 +88,9 @@
     <ClInclude Include="Client\Web_Server_Protocol.pb.h">
       <Filter>Client</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\share\header\Protocol\DataServerProtocol.h">
+      <Filter>Client</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\..\share\header\Protocol\App_Server_Protocol.proto">
