修改linux下的头文件引用路径

--- a/code/server/center/CenterServerLogic/Makefile.am
+++ b/code/server/center/CenterServerLogic/Makefile.am
@@ -27,5 +27,6 @@ INCLUDES += -I../../../share/header/Base/
 INCLUDES += -I../../../share/header/Server/
 INCLUDES += -I../../../share/header/CenterServer/
 INCLUDES += -I../../../share/header/curl/
+INCLUDES += -I../../../share/header/Protocol/
 llibdir=../../../share/llib/
 
