添加DataServer的配置

--- a/bin/server/server.ini
+++ b/bin/server/server.ini
@@ -26,6 +26,16 @@ DataMaxSendPackLen=65000
 DataSleepTime=50
 DataTimeOut=60
 
+[DataServer]
+Port=10200
+Count=1000
+RecvBuffLen=1024
+SendBuffLen=131072
+MaxRecvPackLen=65000
+MaxSendPackLen=65000
+SleepTime=50
+TimeOut=60
+
 [SensorDB]
 IP=39.108.177.39
 Account=yefei
